Changed snake datastructure from Array to LinkedList.